# theindiebeat-simple-player

./: README.md  pyproject.toml  requirements.txt  tibr-player.py
